--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,3 +69,21 @@ button:hover {
 .all-clear:hover {
     background-color: rgb(173, 16, 16);
 }
+
+@media (max-width: 880px) {
+    .calculator {
+        width: 100%;
+        padding: 0;
+    }
+
+    .calculator-screen {
+        height: 150px;
+        font-size: 44px;
+    }
+
+    button {
+        font-size: 35px;
+        height: 100px;
+    }
+
+}
